# FfmpegClion

./: CMakeLists.txt  aacCoder.cpp  cutMedia.cpp  h264Codec.cpp  main.cpp  media.cpp  mediaExchange.cpp  mergeMedia.cpp  videoToPic.cpp
